<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC9C9"
    tools:context=".menu">

    <Button
        android:id="@+id/button5"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btnstyle"
        android:text="@string/record"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btnstyle"
        android:text="@string/purchase"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button10"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/btnstyle"
        android:text="@string/info"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/robot"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/btnstyle"
        android:text="@string/robot"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button3"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btnstyle"
        android:text="@string/transfer"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="147dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/btnstyle"
        android:text="@string/deposit"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>