<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC9C9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="271dp"
        android:layout_height="171dp"
        app:srcCompat="@drawable/logo2"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/editText2"
        android:background="@drawable/editborder"
        android:layout_width="261dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/account"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="371dp" />


    <EditText

        android:id="@+id/editText"
        android:background="@drawable/editborder"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="487dp" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="95dp"
            android:layout_height="65dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/btnstyle"
            android:text="@string/login"
            android:textSize="10pt"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="618dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="94dp"
            android:layout_height="67dp"
            android:background="@drawable/btnstyle"
            android:text="@string/sign"
            android:textSize="10pt"
            tools:layout_editor_absoluteX="240dp"
            tools:layout_editor_absoluteY="618dp" />
    </LinearLayout>


</LinearLayout>