<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC9C9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Transfer">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText9"
            android:layout_width="300dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="54dp"
            android:background="@drawable/editborder"
            android:ems="10"
            android:hint="轉帳帳號"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="73dp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText10"
            android:layout_width="300dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="54dp"
            android:background="@drawable/editborder"
            android:ems="10"
            android:hint="轉帳金額"
            android:gravity="center"
            android:inputType="number"
            android:text=""
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="139dp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <EditText
            android:background="@drawable/editborder"
            android:hint="驗證碼"
            android:gravity="center"
            android:id="@+id/editText11"
            android:layout_width="120dp"

            android:layout_height="54dp"
            android:ems="10"
            android:inputType="number"
            android:text=""
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="202dp" />

        <Button
            android:id="@+id/button12"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:background="@drawable/btnstyle"
            android:text="@string/otpcode"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="204dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnstyle"
            android:text="@string/confirm"
            android:textSize="10pt"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="506dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/btnstyle"
            android:text="@string/cancel"
            android:textSize="10pt"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="506dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_marginTop="40dp"
        android:text=""
        android:gravity="center"
        android:textSize="10pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>